fix: extra spaces

--- a/virtual-keyboard/modules/key/_key.scss
+++ b/virtual-keyboard/modules/key/_key.scss
@@ -30,7 +30,7 @@
 
   @keyframes press {
     25% {
-      bottom: -10px;
+      bottom: -5px;
       background-color: #ffca3a;
       color: white;
     }
